Kubernetes/blazor-demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazor-demo
spec:
  selector:
    matchLabels:
      app: blazor-demo
  template:
    metadata:
      labels:
        app: blazor-demo
    spec:
      containers:
      - name: blazor-demo
        image: mwinkler/blazor-components-demo
        imagePullPolicy: Always
        resources:
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /tmp
          name: diagnostics
      - name: sidecar
        image: mcr.microsoft.com/dotnet/nightly/monitor:5.0.0-preview.1
        ports:
        - containerPort: 52325
        # args: ["--urls", "http://*:52323", "--metricUrls", "http://*:52325"]
        volumeMounts:
        - name: diagnostics
          mountPath: /tmp
        resources:
          limits:
            memory: 256Mi
            cpu: 100m
      volumes:
      - name: diagnostics
        emptyDir: {}
