Kubernetes/blazor-demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blazor-demo
spec:
  selector:
    app: blazor-demo
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: metrics
    port: 52325
    targetPort: 52325
  type: ClusterIP
