Kubernetes/blazor-demo/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blazor-demo-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`blazor.mwinkler.ga`)
    kind: Rule
    services:
    - name: blazor-demo
      port: 80
    middlewares:
    - name: force-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blazor-demo-ingress-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`blazor.mwinkler.ga`)
    kind: Rule
    services:
    - name: blazor-demo
      port: 80
  tls:
    certResolver: myresolver
